--- a/Courses.html
+++ b/Courses.html
@@ -29,7 +29,7 @@
             <li><a href="Courses.html">COURSES</a></li>
             <li><a href="Admissions.html">ADMISSIONS</a></li>
             <li><a href="Media.html">MEDIA</a></li>
-            <li><a href="Citadel.html">CITADEL</a></li>
+            <li><a href="msqccitadeltest.html">CITADEL</a></li>
             <li><a href="Contact.html">CONTACT</a></li>
           </ul>
         </div>
@@ -145,8 +145,44 @@
       </div>
     </section>
 
-    <footer>&copy; 2024 Marian School of Quezon City</footer>
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <section class="footer">
+      <div class="row">
+          <div class="footer-col-1">
+                  <h3>Download our App</h3>
+                  <p>Download App for Android and IOS mobile phone.</p>
+                  <div class="app-logo">
+                      <img src="img/play-store.png">
+                      <img src="img/app-store.png">
+                  </div>
+          </div>
+          <div class="footer-col-2">
+              <img src="img/marian.png">
+              <p>Download App for Android and IOS mobile phone.</p>
+          </div>
+          <div class="footer-col-3">
+              <h3>Useful Links</h3>
+              <ul>
+                  <li>Coupons</li>
+                  <li>Blog Post</li>
+                  <li>Return Policy</li>
+                  <li>Join Affiliate</li>
+              </ul>
+          </div>
+          <div class="footer-col-4">
+              <h3>Follow us</h3>
+              <ul>
+                  <li>Facebook</li>
+                  <li>Twitter</li>
+                  <li>Instagram</li>
+                  <li>YouTube</li>
+              </ul>
+          </div>
+          </div>
+          <hr>
+          <p class="copyright">Copyright 2024 All Rights Reserved</p>
+      </div>
+  </div>
+</div>    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
