--- a/Citadel.html
+++ b/Citadel.html
@@ -17,7 +17,7 @@
         font-size: 16px;
       }
     </style>
-    <section class="header">
+    <section class="courses-header">
       <nav>
         <a href="index.html"
           ><img src="IMG/logo.png" alt="'logo" class="logo"
@@ -38,6 +38,42 @@
       </nav>
       <h1>Citadel</h1>
     </section>
+    <section class="footer">
+      <div class="row">
+          <div class="footer-col-1">
+                  <h3>Download our App</h3>
+                  <p>Download App for Android and IOS mobile phone.</p>
+                  <div class="app-logo">
+                      <img src="img/play-store.png">
+                      <img src="img/app-store.png">
+                  </div>
+          </div>
+          <div class="footer-col-2">
+              <img src="img/marian.png">
+              <p>Download App for Android and IOS mobile phone.</p>
+          </div>
+          <div class="footer-col-3">
+              <h3>Useful Links</h3>
+              <ul>
+                  <li>Coupons</li>
+                  <li>Blog Post</li>
+                  <li>Return Policy</li>
+                  <li>Join Affiliate</li>
+              </ul>
+          </div>
+          <div class="footer-col-4">
+              <h3>Follow us</h3>
+              <ul>
+                  <li>Facebook</li>
+                  <li>Twitter</li>
+                  <li>Instagram</li>
+                  <li>YouTube</li>
+              </ul>
+          </div>
+          </div>
+          <hr>
+          <p class="copyright">Copyright 2024 All Rights Reserved</p>
+      </div>
     <footer>&copy; 2024 Marian School of Quezon City</footer>
     <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
     <script src="script.js"></script>
