--- a/msqccitadeltest.html
+++ b/msqccitadeltest.html
@@ -49,16 +49,16 @@
         <p>washashumga</p>
       </div>
       <div class="card">
-        <h2>oum</h2>
+        <h2>Family Day!</h2>
         <h5>Title description, Sep 2, 2024</h5>
         <img src="IMG/citadel_2.JPG" style="height: 200px; width: 300px"></img>
         <p>그런 날이 있어</p>
       </div>
       <div class="card">
-        <h2>ayeayeaye</h2>
+        <h2>Blue Badgers Win!</h2>
         <h5>Title description, Sep 2, 2024</h5>
         <img src="IMG/citadel_3.JPG" style="height: 200px; width: 300px"></img>
-        <p>asalamalam</p>
+        <p>Blue Badgers won their girls basketball game!</p>
       </div>
     </div>
 
