--- a/Citadel.html
+++ b/Citadel.html
@@ -30,7 +30,7 @@
             <li><a href="Courses.html">COURSES</a></li>
             <li><a href="Admissions.html">ADMISSIONS</a></li>
             <li><a href="Media.html">MEDIA</a></li>
-            <li><a href="Citadel.html">CITADEL</a></li>
+            <li><a href="">CITADEL</a></li>
             <li><a href="Contact.html">CONTACT</a></li>
           </ul>
         </div>
