--- a/Contact.html
+++ b/Contact.html
@@ -64,7 +64,7 @@
           <div class="footer-col-4">
               <h3>Follow us</h3>
               <ul>
-                  <li>Facebook</li>
+                  <li><a href="https://www.facebook.com/marianschool">Facebook</a></li>
                   <li>Twitter</li>
                   <li>Instagram</li>
                   <li>YouTube</li>
