--- a/msqccitadeltest.html
+++ b/msqccitadeltest.html
@@ -46,19 +46,19 @@
         <h2>Yellow Pythons Win!</h2>
         <h5>Title description, Dec 25, 2024</h5>
         <img src="IMG/citadel_1.JPG" style="height: 200px; width: 300px;"></img>
-        <p>washashumga</p>
+        <p>msqc_citadelupdates</p>
       </div>
       <div class="card">
         <h2>Family Day!</h2>
         <h5>Title description, Sep 2, 2024</h5>
         <img src="IMG/citadel_2.JPG" style="height: 200px; width: 300px"></img>
-        <p>그런 날이 있어</p>
+        <p>msqc_citadelupdates</p>
       </div>
       <div class="card">
         <h2>Blue Badgers Win!</h2>
         <h5>Title description, Sep 2, 2024</h5>
         <img src="IMG/citadel_3.JPG" style="height: 200px; width: 300px"></img>
-        <p>Blue Badgers won their girls basketball game!</p>
+        <p>msqc_citadelupdates</p>
       </div>
     </div>
 
@@ -107,7 +107,7 @@
           <div class="footer-col-4">
               <h3>Follow us</h3>
               <ul>
-                  <li>Facebook</li>
+                  <li><a href="https://www.facebook.com/marianschool">Facebook</a></li>
                   <li>Twitter</li>
                   <li>Instagram</li>
                   <li>YouTube</li>
