--- a/Courses.html
+++ b/Courses.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="IMG/logo.ico">
+
   </head>
   <body>
     <style>
@@ -28,9 +30,8 @@
             <li><a href="About.html">ABOUT</a></li>
             <li><a href="Courses.html">COURSES</a></li>
             <li><a href="Admissions.html">ADMISSIONS</a></li>
-            <li><a href="Media.html">MEDIA</a></li>
-            <li><a href="msqccitadeltest.html">CITADEL</a></li>
-            <li><a href="Contact.html">CONTACT</a></li>
+             <!-- <li><a href="Media.html">MEDIA</a></li> -->
+            <li><a href="Citadel.html">CITADEL</a></li>
           </ul>
         </div>
       </nav>
@@ -171,7 +172,7 @@
           <div class="footer-col-4">
               <h3>Follow us</h3>
               <ul>
-                  <li><a href="https://www.facebook.com/marianschool">Facebook</a></li>
+                  <li>Facebook</li>
                   <li>Twitter</li>
                   <li>Instagram</li>
                   <li>YouTube</li>
