--- a/Admissions.html
+++ b/Admissions.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="IMG/logo.ico">
+
   </head>
   <body>
     <style>
@@ -28,31 +30,41 @@
             <li><a href="About.html">ABOUT</a></li>
             <li><a href="Courses.html">COURSES</a></li>
             <li><a href="Admissions.html">ADMISSIONS</a></li>
-            <li><a href="Media.html">MEDIA</a></li>
-            <li><a href="msqccitadeltest.html">CITADEL</a></li>
-            <li><a href="Contact.html">CONTACT</a></li>
+             <!-- <li><a href="Media.html">MEDIA</a></li> -->
+            <li><a href="Citadel.html">CITADEL</a></li>
           </ul>
         </div>
       </nav>
       <h1>Admissions</h1>
     </section>
-
-    <section class="Admission form">
-      
+    <section class="aboutus">
+      <div class="row">
+        <div class="about">
+          <h1>WE ARE OPEN FOR ADMISSIONS</h1>
+          <p>
+            Marian School of Quezon City is a Filipino, Christian Institution of
+            learning established by an academic community of committed and
+            responsible individuals
+          </p>
+          <a href="https://marian.wela.online/enroll" class="hero-btn yellow-btn">ENROLL NOW</a>
+        </div>
+        <div class="about">
+          <img src="IMG/Rbgd.jpg" alt="background" />
+        </div>
+      </div>
     </section>
-
     <section class="footer">
       <div class="row">
           <div class="footer-col-1">
                   <h3>Download our App</h3>
                   <p>Download App for Android and IOS mobile phone.</p>
                   <div class="app-logo">
-                      <img src="img/play-store.png">
-                      <img src="img/app-store.png">
+                      <img src="img/play-store.png" alt="">
+                      <img src="img/app-store.png" alt="">
                   </div>
           </div>
           <div class="footer-col-2">
-              <img src="img/marian.png">
+              <img src="img/marian.png" alt="">
               <p>Download App for Android and IOS mobile phone.</p>
           </div>
           <div class="footer-col-3">
@@ -67,7 +79,7 @@
           <div class="footer-col-4">
               <h3>Follow us</h3>
               <ul>
-                  <li><a href="https://www.facebook.com/marianschool">Facebook</a></li>
+                  <li>Facebook</li>
                   <li>Twitter</li>
                   <li>Instagram</li>
                   <li>YouTube</li>
