--- a/Contact.html
+++ b/Contact.html
@@ -29,8 +29,8 @@
             <li><a href="About.html">ABOUT</a></li>
             <li><a href="Courses.html">COURSES</a></li>
             <li><a href="Admissions.html">ADMISSIONS</a></li>
-            <li><a href="Media.html">MEDIA</a></li>
-            <li><a href="msqccitadeltest.html">CITADEL</a></li>
+             <!-- <li><a href="Media.html">MEDIA</a></li> -->
+            <li><a href="Citadel.html">CITADEL</a></li>
             <li><a href="Contact.html">CONTACT</a></li>
           </ul>
         </div>
@@ -64,7 +64,7 @@
           <div class="footer-col-4">
               <h3>Follow us</h3>
               <ul>
-                  <li><a href="https://www.facebook.com/marianschool">Facebook</a></li>
+                  <li>Facebook</li>
                   <li>Twitter</li>
                   <li>Instagram</li>
                   <li>YouTube</li>
