--- a/Media.html
+++ b/Media.html
@@ -14,6 +14,8 @@
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="IMG/logo.ico">
+
 
   </head>
   
@@ -35,9 +37,8 @@
             <li><a href="About.html">ABOUT</a></li>
             <li><a href="Courses.html">COURSES</a></li>
             <li><a href="Admissions.html">ADMISSIONS</a></li>
-            <li><a href="Media.html">MEDIA</a></li>
-            <li><a href="msqccitadeltest.html">CITADEL</a></li>
-            <li><a href="Contact.html">CONTACT</a></li>
+             <!-- <li><a href="Media.html">MEDIA</a></li> -->
+            <li><a href="Citadel.html">CITADEL</a></li>
           </ul>
         </div>
       </nav>
@@ -99,8 +100,7 @@
           <p class="copyright">Copyright 2024 All Rights Reserved</p>
       </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-    <script src="script.js"></script>
+    
     <script>
       var slideIndex = 1;
       showDivs(slideIndex);
@@ -129,5 +129,8 @@
         dots[slideIndex-1].className += " w3-red";
       }
       </script>
+      <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+      <script src="script.js"></script>
   </body>
+
 </html>
